fix: spacing

--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -27,6 +27,7 @@ $title-n-form-gap: 10rem;
     }
 
     footer {
+        justify-content: center !important;
         flex-direction: row !important;
         font-size: medium !important;
     }
@@ -74,13 +75,12 @@ $title-n-form-gap: 10rem;
 html,
 body {
     transition: 150ms cubic-bezier(0.165, 0.84, 0.44, 1);
-    @include flexCenter;
+    display: flex;
     background-color: $desaturated-purple;
     width: 100%;
     height: 100%;
     font-family: $font-stack-serif;
     flex-direction: column;
-    gap: $title-n-form-gap;
 }
 
 .theme-toggler {
@@ -101,6 +101,7 @@ body {
 
 .main {
     @include flexCenter;
+    flex: 4;
     flex-direction: column;
     gap: 1rem;
     margin: 3rem 0;
@@ -195,14 +196,17 @@ form {
 
 footer {
     @include flexCenter;
+    flex: 1;
     justify-content: space-between;
+    justify-content: end;
     flex-direction: column;
     gap: 1.5rem;
     width: 95%;
+    height: 100%;
     font-weight: 800;
     color: white;
     font-size: small;
-    margin-bottom: 2rem 0;
+    margin-bottom: 2rem;
     .twitter-link {
         color: $baby-blue;
     }
